# stm32_cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: stm32-gcc-flags.cmake  stm32-gcc-jlink-sample.cmake
src/: CMakeLists.txt  README.md
src/cmake/: gcc-arm-none-eabi.cmake  stm32-gcc-jlink-sample.cmake  stm32-gcc-postbuild.cmake
src/libraries/CMSIS/: CMakeLists.txt  cmsis.mk
src/libraries/CMSIS/Device/ST/STM32F7xx/Source/Templates/arm/: startup_stm32f730xx.s  startup_stm32f750xx.s
src/libraries/CMSIS/Device/ST/STM32F7xx/Source/Templates/iar/: startup_stm32f730xx.s  startup_stm32f750xx.s
src/libraries/STM32F1xx_HAL_Driver/: CMakeLists.txt
src/libraries/STM32F4xx_HAL_Driver/: CMakeLists.txt  stm32f4_hal.mk  stm32f4_hal_bl.mk
src/scripts/: jlink-debug.gdbinit
src/stm32proj/: jlink-flash-fw-standalone.jlink  stm32-gcc-jlink.cmake  target-def.cmake
src/stm32proj/cubemx/: .mxproject  Makefile  stm32f103_led.ioc
src/stm32proj/cubemx/Core/Inc/: main.h  stm32_assert.h
src/stm32proj/cubemx/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  sys.c
